[package]
name = "when"
version = "0.1.0"
edition = "2021"
authors = ["Aingaran Elango"]

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.22", features = ["derive"] }
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
incremental = false

[profile.dev]
opt-level = 0